--- a/package.json
+++ b/package.json
@@ -13,5 +13,11 @@
     "nuxt": "^3.15.2",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@nuxt/schema": "^3.15.2",
+    "@nuxt/types": "^2.18.1",
+    "@nuxt/typescript-build": "^3.0.2",
+    "typescript": "^5.7.3"
   }
 }
