--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/image": "^1.9.0",
+    "@nuxtjs/i18n": "^9.1.2",
     "nuxt": "^3.15.2",
     "vue": "latest",
     "vue-router": "latest"
@@ -18,6 +20,7 @@
     "@nuxt/schema": "^3.15.2",
     "@nuxt/types": "^2.18.1",
     "@nuxt/typescript-build": "^3.0.2",
+    "sass-embedded": "^1.83.4",
     "typescript": "^5.7.3"
   }
 }
