--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "@nuxt/image": "^1.9.0",
-    "@nuxtjs/i18n": "^9.1.2",
+    "@nuxtjs/i18n": "^9.1.3",
     "nuxt": "^3.15.2",
     "vue": "latest",
     "vue-router": "latest"
