--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
-    "@nuxt/image": "^1.9.0",
+    "@nuxt/image": "npm:@nuxt/image-nightly@latest",
+    "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/i18n": "^9.1.3",
     "nuxt": "^3.15.2",
     "vue": "latest",
