--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/i18n": "^9.1.3",
     "nuxt": "^3.15.2",
+    "swiper": "^11.2.1",
     "vue": "latest",
     "vue-router": "latest"
   },
