--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,12 @@ logs
 .env
 .env.*
 !.env.example
+
+# Exclure les images et vidéos
+public/images/
+public/videos/
+
+
+# Exclure les images et vidéos
+public/images/
+public/videos/
