--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
-    "@nuxt/image": "npm:@nuxt/image-nightly@latest",
+    "@nuxt/image": "npm:@nuxt/image-nightly@^1.9.1-20250115-142718-54dc469",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/i18n": "^9.1.3",
+    "gsap": "^3.12.7",
     "nuxt": "^3.15.2",
     "swiper": "^11.2.1",
     "vue": "latest",
