--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint . --fix",
+    "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
@@ -17,17 +19,45 @@
     "@nuxt/image": "npm:@nuxt/image-nightly@^1.9.1-20250115-142718-54dc469",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/i18n": "^9.1.3",
+    "@vue/compiler-sfc": "^3.5.13",
+    "fork-ts-checker-webpack-plugin": "^9.0.2",
+    "glob": "^11.0.1",
     "gsap": "^3.12.7",
     "nuxt": "^3.15.2",
     "swiper": "^11.2.1",
-    "vue": "latest",
-    "vue-router": "latest"
+    "vue": "^3.5.13",
+    "vue-meta": "^2.4.0",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@nuxt/schema": "^3.15.2",
+    "@eslint/js": "^9.19.0",
+    "@nuxt/schema": "^3.15.4",
     "@nuxt/types": "^2.18.1",
     "@nuxt/typescript-build": "^3.0.2",
+    "@types/js-yaml": "^4.0.9",
+    "@types/mongodb": "^4.0.6",
+    "@types/node": "^22.13.0",
+    "@types/vue": "^1.0.31",
+    "@types/webpack": "^5.28.5",
+    "eslint": "^9.19.0",
+    "eslint-plugin-vue": "^9.32.0",
+    "globals": "^15.14.0",
+    "globby": "^11.1.0",
     "sass-embedded": "^1.83.4",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.22.0",
+    "vue-tsc": "^2.1.10"
+  },
+  "compilerOptions": {
+    "strict": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "noImplicitReturns": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "skipLibCheck": true,
+    "types": [
+      "vue"
+    ]
   }
 }
